--- a/templates/servicos.html
+++ b/templates/servicos.html
@@ -6,34 +6,54 @@
     <div>
         <h1>Serviços</h1>
         <hr>
-        <h2>Lavagem de Tapetes</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
-            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
-            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
-            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
-            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
-            section 1.10.32.</p>
-        <h2>Lavagem de estofados</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
-            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
-            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
-            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
-            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
-            section 1.10.32.</p>
-        <h2>Lavagem de cadeiras</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
-            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
-            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
-            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
-            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
-            section 1.10.32.</p>
-    </div>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="container custom-container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h2 class="custom-padding">Limpeza de tapetes</h2>
+                                    <p class="banner-text">Na busca por um ambiente mais saudável e sustentável, o uso
+                                        de produtos ecologicamente corretos na lavagem de tapetes envolve a seleção
+                                        cuidadosa de ingredientes não tóxicos e biodegradáveis. Esses produtos são
+                                        suaves tanto para o meio ambiente quanto para a saúde humana, evitando o acúmulo
+                                        de resíduos químicos nocivos em nossos espaços de convivência. Com isso, não
+                                        apenas garantimos a preservação da qualidade e durabilidade dos nossos tapetes,
+                                        mas também assumimos um compromisso tangível com a proteção do nosso planeta e a
+                                        promoção de um estilo de vida mais sustentável.</p>
+                                    <h2 class="custom-padding">Limpeza de sofás e cadeiras</h2>
+                                    <p class="banner-text">Ao optar por métodos que empregam produtos ecologicamente
+                                        corretos, estamos não apenas revitalizando a aparência de nossos estofados, mas
+                                        também contribuindo para um ambiente mais saudável e sustentável em nossos
+                                        lares.</p>
 
-</div>
-{% endblock %}
+                                    <p class="banner-text">Esses produtos, formulados com ingredientes naturais e biodegradáveis,
+                                        proporcionam uma limpeza profunda sem comprometer a qualidade ou durabilidade
+                                        dos móveis. Além disso, ajudam a eliminar odores persistentes, deixando os
+                                        estofados com uma sensação de frescor revitalizante.</p>
+                                    <p class="banner-text">A lavagem profissional com produtos ecologicamente corretos também desempenha um
+                                        papel crucial na redução da presença de ácaros, micro-organismos que podem
+                                        desencadear alergias e problemas respiratórios. A remoção eficaz desses agentes
+                                        patogênicos não só promove um ambiente mais saudável, mas também proporciona
+                                        maior conforto e bem-estar para toda a família.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="container" style="padding-top: 50px">
+                            <div class="card" style="width: 18rem;">
+                                <img src="static/imagens/imagem_filhote.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Elimine a sujeira e os ácaros de seus tapetes e estofados.
+                                        Proteja sua família.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-------Banner End------->
+        {% endblock %}
