--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="static/css/css.css" class="css">
+  
   <title>Personal Limpadora</title>
 </head>
 
 <body>
+
+  <!--Início NavBar-->
+
   <div class="container">
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <nav class="navbar navbar-expand-md bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{{ url_for('home') }}">Personal</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -21,7 +27,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
               </li>
@@ -30,6 +36,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('sobre_nos') }}">Sobre Nós</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('contatos') }}">Contatos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login') }}">Login</a>
@@ -47,10 +56,23 @@
     </header>
     <main>
       {% block main %}
-
+33
       {% endblock %}
     </main>
   </div>
+
+<!--Fim da NavBar-->
+
+<!--API WhatsApp-->
+
+  <div class="whats">
+    <a aria-label="Chat on WhatsApp"
+      href="https://wa.me/5516993367128" target="_blank"><img
+        alt="Chat on WhatsApp" src="static/imagens/botao-whatsapp.png" />
+  </div>
+  
+<!--Fim do API-->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
