--- a/templates/sobre_nos.html
+++ b/templates/sobre_nos.html
@@ -5,38 +5,44 @@
     <br>
     <h1>Sobre Nós</h1>
     <hr>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
-        The standard Lorem Ipsum passage, used since the 1500s
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="container custom-container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 class="custom-padding">Mais limpeza, mais saúde!</h2>
+                                <p class="banner-text">Com anos de experiência acumulada no setor de limpeza
+                                    profissional, Renata e Mário compreenderam as necessidades únicas dos clientes e
+                                    perceberam a demanda por serviços especializados de alta qualidade. Com determinação
+                                    e dedicação, eles fundaram a "Personal Limpadora", trazendo consigo um conjunto de
+                                    valores que colocam a excelência e a sustentabilidade no centro de suas operações.
+                                </p>
+                                <p class="banner-text"> A "Personal Limpadora" não apenas oferece serviços de lavagem de
+                                    tapetes e estofados, mas também proporcionam uma experiência personalizada que visa superar as expectativas de cada
+                                    cliente. Seja através da utilização de técnicas avançadas de limpeza ou do emprego
+                                    de produtos ecologicamente corretos, eles estão comprometidos em entregar resultados
+                                    impecáveis, preservando ao mesmo tempo o meio ambiente.
 
-    <p>Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
-        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
-        enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-        qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-        adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-        voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-        aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam
-        nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-        1914 translation by H. Rackham</p>
-    <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I
-        will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth,
-        the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure,
-        but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely
-        painful.
-        Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but
-        because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial
-        example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But
-        who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one
-        who avoids a pain that produces no resultant pleasure?"</p>
-</div>
-{% endblock %}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="container" style="padding-top: 50px">
+                        <div class="card" style="width: 18rem;">
+                            <img src="static/imagens/imagem_equipe.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">Entre em contato pelo botão ao lado e faça um orçamento sem
+                                    compromisso.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-------Banner End------->
+    {% endblock %}
