--- a/templates/cadastrar_pedido.html
+++ b/templates/cadastrar_pedido.html
@@ -1,15 +1,7 @@
 {% extends 'base.html' %}
 
 {% block restrito %}
-<li class="nav-item">
-    <a class="nav-link" href="{{ url_for('cadastrar_pedido') }}">Cadastrar Pedido</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="{{ url_for('listar_pedidos') }}">Listar Pedidos</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
-</li>
+
 {% endblock %}
 
 {% block main %}
@@ -20,9 +12,19 @@
     </div>
     <hr>
     <form action="{{url_for('cadastrar_pedido')}}" class="form-control" method="post">
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Data do Pedido: </label>
-            <input type="text" class="form-control" name="data_pedido" placeholder="dia/mês/ano" required>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Data Pedido: </label>
+                    <input type="text" class="form-control" name="data_pedido" placeholder="dia/mês/ano" required>
+                </div>
+            </div>
+            <div class="col-md-6">    
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Data Entrega: </label>
+                    <input type="text" class="form-control" name="data_entrega" placeholder="dia/mês/ano">
+                </div>
+            </div>
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Nome: </label>
@@ -44,6 +46,19 @@
             <label for="exampleFormControlInput1" class="form-label">Valor: </label>
             <input type="text" class="form-control" name="valor">
         </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="status" value="devedor" checked>
+            <label class="form-check-label" for="flexRadioDefault1">
+              Devedor
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="status" value="pago">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Pago
+            </label>
+          </div>
+        <br><br>
         <input type="submit" class="btn btn-primary" name="cadastrar" value="Cadastrar Pedido">
     </form>
 </div>
