--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
+
   <link rel="stylesheet" href="static/css/css.css" class="css">
-  
+
   <title>Personal Limpadora</title>
 </head>
 
@@ -38,14 +38,20 @@
                 <a class="nav-link" href="{{ url_for('sobre_nos') }}">Sobre Nós</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('contatos') }}">Contatos</a>
+                <a class="nav-link" href="{{ url_for('contatos') }}">Contatos &nbsp&nbsp&nbsp&nbsp|&nbsp</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login') }}">Login</a>
               </li>
-              {% block restrito %}
-
-              {% endblock %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('cadastrar_pedido') }}">Cadastrar Pedido</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('listar_pedidos') }}">Listar Pedidos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
+              </li>
             </ul>
             {% block pesquisa %}
 
@@ -54,24 +60,21 @@
         </div>
       </nav>
     </header>
+    <!--Fim da NavBar-->
+
     <main>
       {% block main %}
-33
+
       {% endblock %}
     </main>
   </div>
 
-<!--Fim da NavBar-->
-
-<!--API WhatsApp-->
-
+  <!--API WhatsApp-->
   <div class="whats">
-    <a aria-label="Chat on WhatsApp"
-      href="https://wa.me/5516993367128" target="_blank"><img
-        alt="Chat on WhatsApp" src="static/imagens/botao-whatsapp.png" />
+    <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
+        src="static/imagens/botao-whatsapp.png" />
   </div>
-  
-<!--Fim do API-->
+  <!--Fim do API-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
