--- a/templates/contatos.html
+++ b/templates/contatos.html
@@ -5,7 +5,7 @@
     <br>
     <h1>Contatos</h1>
     <hr><br><br><br>
-    
+
     <h2>Tel. (16) 99336-7128</h2>
     <p>Faça seu orçamento sem compromisso!</p>
     <br>
@@ -19,9 +19,9 @@
         </div>
         <div class="col-md-8">
             <div class="">
-                <iframe
+                <iframe class=""
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3698.5637179173063!2d-47.894896423927484!3d-22.028021607058598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b877177e5f5871%3A0xe302501e20af7dc0!2sR.%20Vivaldo%20Lanzone%2C%2040%20-%20Nucleo%20Res.%20Silvio%20Vilari%2C%20S%C3%A3o%20Carlos%20-%20SP%2C%2013570-635!5e0!3m2!1spt-BR!2sbr!4v1712007300565!5m2!1spt-BR!2sbr"
-                    width="80%" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
+                    width="100%" height="350" style="border: 0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
