--- a/templates/editar_pedido.html
+++ b/templates/editar_pedido.html
@@ -7,13 +7,22 @@
         <h1>Editar Pedido</h1>
     </div>
     <hr>
-    <form 
-    action="{{url_for('editar_pedido', id_pedido=pedido.id_pedido)}}" 
-    class="form-control" 
-    method="post">
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Data: </label>
-            <input type="text" class="form-control" name="data_pedido" placeholder="dia/mês/ano" value="{{pedido.data_pedido}}" required>
+    <form action="{{url_for('editar_pedido', id_pedido=pedido.id_pedido)}}" class="form-control" method="post">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Data Pedido: </label>
+                    <input type="text" class="form-control" name="data_pedido" placeholder="dia/mês/ano"
+                        value="{{pedido.data_pedido}}" required>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Data Entrega: </label>
+                    <input type="text" class="form-control" name="data_entrega" placeholder="dia/mês/ano"
+                        value="{{pedido.data_entrega}}">
+                </div>
+            </div>
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Nome: </label>
@@ -35,19 +44,18 @@
             <label for="exampleFormControlInput1" class="form-label">Valor: </label>
             <input type="text" class="form-control" name="valor" value="{{pedido.valor}}">
         </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="status" value="devedor" required>
+            <label class="form-check-label" for="flexRadioDefault1">Não Pago</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="status" value="pago">
+            <label class="form-check-label" for="flexRadioDefault2">Pago</label>
+        </div>
+        <br>
+        <br>
         <input type="submit" class="btn btn-primary" name="cadastrar" value="Finalizar edição">
     </form>
 </div>
 <br>
-{% if status %}
-    {% if status['type'] == 'sucesso' %}
-    <div class="alert alert-success" role="alert">
-        {{status['message']}}
-    </div>
-    {% else %}
-    <div class="alert alert-danger" role="alert">
-        {{status['message']}}    
-    </div>
-    {% endif %}
-{% endif %}
 {% endblock %}
