--- a/templates/base.html
+++ b/templates/base.html
@@ -43,11 +43,24 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login') }}">Login</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('cadastrar_pedido') }}">Cadastrar Pedido</a>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Cadastro
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('cadastrar_pedido') }}">Pedido</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('cadastrar_despesas') }}">Despesas</a></li>
+                </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('listar_pedidos') }}">Listar Pedidos</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Listar
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('listar_pedidos') }}">Pedidos</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('listar_despesas') }}">Despesas</a></li>
+                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
