--- a/templates/cadastrar_pedido.html
+++ b/templates/cadastrar_pedido.html
@@ -16,13 +16,13 @@
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Data Pedido: </label>
-                    <input type="text" class="form-control" name="data_pedido" placeholder="dia/mês/ano" required>
+                    <input type="date" class="form-control" name="data_pedido" placeholder="dia/mês/ano" required>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Data Entrega: </label>
-                    <input type="text" class="form-control" name="data_entrega" placeholder="dia/mês/ano">
+                    <input type="date" class="form-control" name="data_entrega" placeholder="dia/mês/ano">
                 </div>
             </div>
             <div class="col-md-4">
