--- a/templates/erro_login.html
+++ b/templates/erro_login.html
@@ -5,7 +5,7 @@
     <div class="text-center">
         <br><br><br>
         <h1>Erro de login</h1>
-        <h3>Faça o login novamente.</h3>
+        <h3>Oops... Alguma coisa deu errada. Tente novamente.</h3>
     </div>
 </div>
 {% endblock %}
