--- a/templates/erro_pagina_403.html
+++ b/templates/erro_pagina_403.html
@@ -9,7 +9,7 @@
         <br>
         <img src=" static/imagens/erro_403.png" alt="Acesso restrito">
         <br><br>
-        <h2>Você tentou acessar uma página restrita!</h2>
+        <h2>Você tentou acessar uma página de acesso restrito!</h2>
         <h4>Redirecionado para a página de login...</h4>
     </div>
 </div>
