--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,20 @@
 
   <link rel="stylesheet" href="static/css/css.css" class="css">
 
+
+  <!--Script usado na função relatório para mostrar o resultado na mesma página da busca-->
+  <script>
+    function showResults() {
+        document.getElementById('search-form').style.display = 'none';
+        document.getElementById('results').style.display = 'block';
+    }
+
+    function showSearch() {
+        document.getElementById('search-form').style.display = 'block';
+        document.getElementById('results').style.display = 'none';
+    }
+</script>
+
   <title>Personal Limpadora</title>
 </head>
 
@@ -62,6 +76,14 @@
                   <li><a class="dropdown-item" href="{{ url_for('listar_despesas') }}">Despesas</a></li>
                 </ul>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Relatórios
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('erro_pagina_404') }}">Despesas por período</a></li>
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
               </li>
@@ -82,6 +104,7 @@
     </main>
   </div>
 
+
   <!--API WhatsApp-->
   <div class="whats">
     <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
@@ -89,6 +112,7 @@
   </div>
   <!--Fim do API-->
 
+  <!--Importação do javascript do Bootstrap 5.3-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
