--- a/templates/listar_despesas.html
+++ b/templates/listar_despesas.html
@@ -10,7 +10,7 @@
 {% block main %}
 <div class="container">
     <br>
-    <h1>Lista Materiais de Consumo</h1>
+    <h1>Lista Despesas</h1>
     <hr>
     <br>
     <form action="{{url_for( 'listar_despesas' )}}" class="form-control" method="post">
