--- a/templates/search_p.html
+++ b/templates/search_p.html
@@ -2,12 +2,12 @@
 
 {% block main %}
 <br>
-<h1>Despesas por período</h1>
+<h1>Pedidos por período</h1>
 <hr>
 <br><br>
 <div id="">
     <h2>Período de Busca</h2>
-    <form action="{{ url_for('search') }}" method="post">
+    <form action="{{ url_for('search_p') }}" method="post">
         <div id="search-form">
             <label for="start_date">Data inicial: </label>
             <input type="date" id="start_date" name="start_date" required><br><br>
