--- a/templates/editar_despesas.html
+++ b/templates/editar_despesas.html
@@ -10,7 +10,8 @@
         <div class="row">
             <div class="col-2">
                 <label for="despesa_data">Data:</label>
-                <input type="text" class="form-control" name="despesa_data" min="1" max="31" value="{{ despesa.despesa_data }}"  required>
+                <input type="date" class="form-control" name="despesa_data" min="1" max="31"
+                    value="{{ despesa.despesa_data }}" required>
             </div>
         </div>
         <br>
@@ -18,19 +19,22 @@
             <div class="col-md-3">
                 <div class="mb-3">
                     <label for="despesa_nome" class="form-label">Nome: </label>
-                    <input type="text" class="form-control" name="despesa_nome"  value="{{ despesa.despesa_nome }}" placeholder="">
+                    <input type="text" class="form-control" name="despesa_nome" value="{{ despesa.despesa_nome }}"
+                        placeholder="">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="mb-2">
                     <label for="despesa_qtde" class="form-label">Quantidade: </label>
-                    <input type="text" class="form-control" name="despesa_qtde"  value="{{ despesa.despesa_qtde }}" placeholder="">
+                    <input type="text" class="form-control" name="despesa_qtde" value="{{ despesa.despesa_qtde }}"
+                        placeholder="">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="mb-2">
                     <label for="despesa_valor" class="form-label">Valor (R$): </label>
-                    <input type="text" class="form-control" name="despesa_valor"  value="{{ despesa.despesa_valor }}" placeholder="">
+                    <input type="text" class="form-control" name="despesa_valor" value="{{ despesa.despesa_valor }}"
+                        placeholder="">
                 </div>
             </div>
         </div>
@@ -38,29 +42,43 @@
         <input type="submit" class="btn btn-primary" name="despesa" value="Salvar edição">
         <br>
     </form>
-</div>
+
 <br>
+
+
 {% if status %}
-{% if status['type'] == 'sucesso' %}
-<div class="alert alert-success" role="alert">
-    {{status['message']}}
-</div>
-{% else %}
-<div class="alert alert-danger" role="alert">
-    {{status['message']}}
-</div>
+    {% if status['type'] == 'sucesso' %}
+        <div class="alert alert-success" role="alert">
+            {{status['message']}}
+        </div>
+    {% else %}
+        <div class="alert alert-danger" role="alert">
+            {{status['message']}}
+        </div>
+    {% endif %}
 {% endif %}
-{% endif %}
+
 
 <!--Troca "," por "." nas entradas do campo valor ao gravar no Banco de Dados-->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         document.querySelector('form').addEventListener('submit', function () {
+            var valorInput = document.querySelector('input[name="despesa_valor"]');
+            valorInput.value = valorInput.value.replace(',', '.');
+        });
+    });
+</script>
+
+
+<!--<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        document.querySelector('form').addEventListener('submit', function () {
             var valorInputs = document.querySelectorAll('input[name^="valor_"]');
-            valorInputs.forEach(function(valorInput) {
+            valorInputs.forEach(function (valorInput) {
                 valorInput.value = valorInput.value.replace(',', '.');
             });
         });
     });
-</script>
+</script>-->
+</div>
 {% endblock %}
