--- a/templates/editar_pedido.html
+++ b/templates/editar_pedido.html
@@ -12,14 +12,14 @@
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Data Pedido: </label>
-                    <input type="text" class="form-control" name="data_pedido" placeholder="dia/mês/ano"
+                    <input type="date" class="form-control" name="data_pedido" placeholder="dia/mês/ano"
                         value="{{pedido.data_pedido}}" required>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Data Entrega: </label>
-                    <input type="text" class="form-control" name="data_entrega" placeholder="dia/mês/ano"
+                    <input type="date" class="form-control" name="data_entrega" placeholder="dia/mês/ano"
                         value="{{pedido.data_entrega}}">
                 </div>
             </div>
@@ -88,6 +88,8 @@
 </div>
 <br>
 
+
+
 <!--Troca "," por "." nas entradas do campo valor ao gravar no Banco de Dados-->
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -98,3 +100,6 @@
     });
 </script>
 {% endblock %}
+
+
+
