--- a/templates/pedidos.html
+++ b/templates/pedidos.html
@@ -20,7 +20,7 @@
     <br>
     </div>
 
-    <table class="table table-hover table-sm">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Data Pedido</th>
