--- a/templates/result_e.html
+++ b/templates/result_e.html
@@ -3,7 +3,15 @@
 {% block main %}
 <br>
 <div id="results" name="results">
-    <h1>Entregas no dia {}</h1>
+    <div class="row">
+        <div>
+            <h1>Entregas no dia</h1>
+
+
+            
+        </div>
+        
+    </div>
 <hr><br>
     <table class="table table-hover table-sm">
         
