--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="{{ url_for('search_e') }}">Listar entregas do dia</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('search_p') }}">Pedidos por período</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('search') }}">Despesas por período</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('search_d') }}">Despesas por período</a></li>
                 </ul>
               </li>
               <li class="nav-item">
