--- a/templates/result_d.html
+++ b/templates/result_d.html
@@ -30,6 +30,6 @@
         </tbody>
     </table>
     <br>
-    <button class="btn btn-primary" onclick="window.location.href='/search'">Nova pesquisa</button>
+    <button class="btn btn-primary" onclick="window.location.href='/search_d'">Nova pesquisa</button>
 </div>
 {% endblock %}
