--- a/templates/search_d.html
+++ b/templates/search_d.html
@@ -8,7 +8,7 @@
 <div id="">
     <h2>Período de Busca</h2>
     <br>
-    <form action="{{ url_for('search') }}" method="post">
+    <form action="{{ url_for('search_d') }}" method="post">
         <div id="search-form">
             <label for="start_date">Data inicial: </label>
             <input type="date" id="start_date" name="start_date" required><br><br>
