Inserção da data_pedido

--- a/templates/cadastrar_pedido.html
+++ b/templates/cadastrar_pedido.html
@@ -21,6 +21,12 @@
             </div>
             <div class="col-md-2">
                 <div class="mb-2">
+                    <label for="exampleFormControlInput1" class="form-label">Data Retirada: </label>
+                    <input type="date" class="form-control" name="data_retirada" placeholder="dia/mês/ano">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="mb-2">
                     <label for="exampleFormControlInput1" class="form-label">Data Entrega: </label>
                     <input type="date" class="form-control" name="data_entrega" placeholder="dia/mês/ano">
                 </div>
