--- a/templates/result_p.html
+++ b/templates/result_p.html
@@ -8,8 +8,9 @@
     <table class="table table-hover table-sm">
         
         <tr>
-            <th>Data Pedido</th>
-            <th>Data Entrega</th>
+            <th>Pedido</th>
+            <th>Retirada</th>
+            <th>Entrega</th>
             <th>Ficha</th>
             <th>Nome</th>
             <th>Endereço</th>
@@ -17,12 +18,13 @@
             <th>Telefone</th>
             <th>Serviço</th>
             <th>Valor</th>
-            <th>Status</th>
         </tr>
         {% for pedido in results %}
-        <tr {% if pedido.data_entrega==""%}class="table-warning" {% endif %}
+        <tr {% if pedido.data_retirada==""%}class="table-success" {% endif %}
+            {% if pedido.data_entrega ==""%}class="table-warning" {% endif %}
             {% if pedido.status=="devedor" %}class="table-danger"{% endif %}>
             <td>{{ pedido.data_pedido }}</td>
+            <td>{{ pedido.data_retirada }}</td>
             <td>{{ pedido.data_entrega }}</td>
             <td>{{ pedido.id_ficha }}</td>
             <td>{{ pedido.nome }}</td>
@@ -31,7 +33,6 @@
             <td>{{ pedido.telefone }}</td>
             <td>{{ pedido.servico }}</td>
             <td>{{ pedido.valor }}</td>
-            <td>{{ pedido.status }}</td>
         </tr>
         {% endfor %}
         <tr>
