--- a/templates/editar_pedido.html
+++ b/templates/editar_pedido.html
@@ -9,22 +9,29 @@
     <hr>
     <form action="{{url_for('editar_pedido', id_pedido=pedido.id_pedido)}}" class="form-control" method="post">
         <div class="row">
-            <div class="col-md-4">
-                <div class="mb-3">
+            <div class="col-md-2">
+                <div class="mb-2">
                     <label for="exampleFormControlInput1" class="form-label">Data Pedido: </label>
                     <input type="date" class="form-control" name="data_pedido" placeholder="dia/mês/ano"
                         value="{{pedido.data_pedido}}" required>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="mb-3">
+            <div class="col-md-2">
+                <div class="mb-2">
+                    <label for="exampleFormControlInput1" class="form-label">Data Retirada: </label>
+                    <input type="date" class="form-control" name="data_retirada" placeholder="dia/mês/ano"
+                        value="{{pedido.data_retirada}}">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="mb-2">
                     <label for="exampleFormControlInput1" class="form-label">Data Entrega: </label>
                     <input type="date" class="form-control" name="data_entrega" placeholder="dia/mês/ano"
                         value="{{pedido.data_entrega}}">
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="mb-3">
+            <div class="col-md-2">
+                <div class="mb-2">
                     <label for="exampleFormControlInput1" class="form-label">Ficha: </label>
                     <input type="text" class="form-control" name="id_ficha" placeholder="Ficha número"
                             value="{{pedido.id_ficha}}">
