--- a/templates/result_e.html
+++ b/templates/result_e.html
@@ -16,8 +16,9 @@
     <table class="table table-hover table-sm">
         
         <tr>
-            <th>Data Pedido</th>
-            <th>Data Entrega</th>
+            <th>Pedido</th>
+            <th>Retirada</th>
+            <th>Entrega</th>
             <th>Ficha</th>
             <th>Nome</th>
             <th>Endereço</th>
@@ -25,12 +26,13 @@
             <th>Telefone</th>
             <th>Serviço</th>
             <th>Valor</th>
-            <th>Status</th>
         </tr>
         {% for pedido in results %}
-        <tr {% if pedido.data_entrega==""%}class="table-warning" {% endif %}
+        <tr {% if pedido.data_retirada==""%}class="table-success" {% endif %}
+            {% if pedido.data_entrega ==""%}class="table-warning" {% endif %}
             {% if pedido.status=="devedor" %}class="table-danger"{% endif %}>
             <td>{{ pedido.data_pedido }}</td>
+            <td>{{ pedido.data_retirada }}</td>
             <td>{{ pedido.data_entrega }}</td>
             <td>{{ pedido.id_ficha }}</td>
             <td>{{ pedido.nome }}</td>
@@ -39,13 +41,11 @@
             <td>{{ pedido.telefone }}</td>
             <td>{{ pedido.servico }}</td>
             <td>{{ pedido.valor }}</td>
-            <td>{{ pedido.status }}</td>
         </tr>
         {% endfor %}
         <tr>
-            <td colspan="8"><strong>Total</strong></td>
+            <td colspan="9"><strong>Total</strong></td>
             <td><strong>{{ total_value }}</strong></td>
-            <td></td>
         </tr>
     </table>
     <br>
