--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,7 @@
                   Relatórios
                 </a>
                 <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('search_r') }}">Listar retiradas do dia</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('search_e') }}">Listar entregas do dia</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('search_p') }}">Pedidos por período</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('search_d') }}">Despesas por período</a></li>
