--- a/templates/cadastrar_pedido.html
+++ b/templates/cadastrar_pedido.html
@@ -78,13 +78,13 @@
         </div>
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="status" value="devedor" checked>
-            <label class="form-check-label" for="flexRadioDefault1">
+            <label class="form-check-label" for="status">
                 Devedor
             </label>
         </div>
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="status" value="pago">
-            <label class="form-check-label" for="flexRadioDefault2">
+            <label class="form-check-label" for="status">
                 Pago
             </label>
         </div>
