--- a/templates/result_r.html
+++ b/templates/result_r.html
@@ -3,7 +3,12 @@
 {% block main %}
 <br>
 <div id="results" name="results">
-    <h1>Pedidos por período</h1>
+    <div class="row">
+        <div>
+            <h1>Retiradas no dia</h1>
+        </div>
+        
+    </div>
 <hr><br>
     <table class="table table-hover table-sm">
         
@@ -22,7 +27,7 @@
         {% for pedido in results %}
         <tr {% if pedido.data_retirada==""%}class="table-success" {% endif %}
             {% if pedido.data_entrega ==""%}class="table-warning" {% endif %}
-            {% if pedido.status=="devedor" or pedido.status=="Devedor" %}class="table-danger"{% endif %}>
+            {% if pedido.status=="devedor" %}class="table-danger"{% endif %}>
             <td>{{ pedido.data_pedido }}</td>
             <td>{{ pedido.data_retirada }}</td>
             <td>{{ pedido.data_entrega }}</td>
@@ -41,6 +46,6 @@
         </tr>
     </table>
     <br>
-    <button class="btn btn-primary" onclick="window.location.href='/search_p'">Nova pesquisa</button>
+    <button class="btn btn-primary" onclick="window.location.href='/search_r'">Nova pesquisa</button>
 </div>
 {% endblock %}
