--- a/templates/cadastrar_pedido.html
+++ b/templates/cadastrar_pedido.html
@@ -90,6 +90,7 @@
         </div>
         <br><br>
         <input type="submit" class="btn btn-primary" name="cadastrar" value="Cadastrar Pedido">
+        <button class="btn btn-primary" onclick="window.location.href='/calculadora'">Orçamento</button>
     </form>
 </div>
 <br>
