Novo deletar e várias atualizações

--- a/templates/cadastrar_despesas.html
+++ b/templates/cadastrar_despesas.html
@@ -33,6 +33,11 @@
                     <input type="text" class="form-control" name="despesa_valor" placeholder="">
                 </div>
             </div>
+            <div class="">
+                <div class="" style="display: none;">
+                    <input type="text" class="form-control" name="despesa_deletar" value="1" placeholder="" readonly>
+                </div>            
+            </div>
         </div>
         <br><br>
         <input type="submit" class="btn btn-primary" name="despesa" value="Cadastrar despesas">
