--- a/templates/cadastrar_pedido.html
+++ b/templates/cadastrar_pedido.html
@@ -88,6 +88,11 @@
                 Pago
             </label>
         </div>
+        <div class="">
+            <div class="" style="display: none;">
+                <input type="text" class="form-control" name="deletar" value="1" placeholder="" readonly>
+            </div>            
+        </div>
         <br><br>
         <input type="submit" class="btn btn-primary" name="cadastrar" value="Cadastrar Pedido">
         <button class="btn btn-primary" onclick="window.location.href='/calculadora'">Orçamento</button>
