--- a/templates/calculadora.html
+++ b/templates/calculadora.html
@@ -21,7 +21,7 @@
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="formato_tapete" value="False">
             <label class="form-check-label" for="formato_tapete">
-                Redondo
+                Redondo (Nesse caso, entre com o valor da largura nos dois campos)
             </label>
         </div>
         <br><br>
