--- a/templates/index.html
+++ b/templates/index.html
@@ -33,4 +33,14 @@
   </div>
 </section>
 <!-------Banner End------->
+
+{% block WhatsApp %}
+<!--API WhatsApp-->
+<div class="whats">
+  <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
+      src="static/imagens/botao-whatsapp.png" />
+</div>
+<!--Fim do API-->
+{% endblock %}
+
 {% endblock %}
