--- a/templates/servicos.html
+++ b/templates/servicos.html
@@ -57,3 +57,12 @@
         </section>
         <!-------Banner End------->
         {% endblock %}
+
+        {% block WhatsApp %}
+        <!--API WhatsApp-->
+        <div class="whats">
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
+            src="static/imagens/botao-whatsapp.png" />
+        </div>
+        <!--Fim do API-->
+        {% endblock %}
