--- a/templates/base.html
+++ b/templates/base.html
@@ -4,124 +4,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
   <link rel="stylesheet" href="static/css/css.css" class="css">
 
-
-  <!--Script usado na função relatório para mostrar o resultado na mesma página da busca-->
-  <script>
-    function showResults() {
-        document.getElementById('search-form').style.display = 'none';
-        document.getElementById('results').style.display = 'block';
-    }
-
-    function showSearch() {
-        document.getElementById('search-form').style.display = 'block';
-        document.getElementById('results').style.display = 'none';
-    }
-</script>
-
-  <title>Personal Limpadora</title>
+  <title>Personal</title>
 </head>
 
 <body>
-
-  <!--Início NavBar-->
-
   <div class="container">
-    <header>
-      <nav class="navbar navbar-expand-md bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('home') }}">Personal</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('servicos') }}">Serviços</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('sobre_nos') }}">Sobre Nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('contatos') }}">Contatos &nbsp&nbsp&nbsp&nbsp|&nbsp</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Cadastro
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('cadastrar_pedido') }}">Pedido</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('cadastrar_despesas') }}">Despesas</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Listar
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('listar_pedidos') }}">Pedidos</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('listar_despesas') }}">Despesas</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Relatórios
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('search_r') }}">Listar retiradas do dia</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('search_e') }}">Listar entregas do dia</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('search_p') }}">Pedidos por período</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('search_d') }}">Despesas por período</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
-              </li>
-            </ul>
+    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('home') }}">Personal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('servicos') }}">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('sobre_nos') }}">Sobre nós</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('contatos') }}">Contatos
+                &nbsp&nbsp&nbsp&nbsp|&nbsp</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Login</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Cadastro
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('cadastrar_pedido') }}">Cadastrar pedido</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('cadastrar_despesas') }}">Cadastrar despesa</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Listar
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('listar_pedidos') }}">Pedidos</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('listar_despesas') }}">Despesas</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Relatórios
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('search_e') }}">Entregas</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('search_r') }}">Retiradas</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('search_p') }}">Pedidos</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('search_d') }}">Despesas</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Sair</a>
+            </li>
             {% block pesquisa %}
 
             {% endblock %}
-          </div>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <!--Fim da NavBar-->
-
+      </div>
+    </nav>
     <main>
       {% block main %}
 
       {% endblock %}
+
+      {% block WhatsApp %}
+
+      {% endblock %}
     </main>
-  
-
-
-    <!--API WhatsApp-->
-    <div class="whats">
-      <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
-          src="static/imagens/botao-whatsapp.png" />
-    </div>
-    <!--Fim do API-->
   </div>
-
-
-    <!--Importação do javascript do Bootstrap 5.3-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous">
-    </script>
-
-
+    <script src="{{ url_for('static', filename='css/bootstrap.bundle.min.js') }}"></script>
 </body>
+
 </html>
