--- a/templates/contatos.html
+++ b/templates/contatos.html
@@ -25,4 +25,15 @@
         </div>
     </div>
 </div>
+
+{% block WhatsApp %}
+<!--API WhatsApp-->
+<div class="whats">
+  <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
+      src="static/imagens/botao-whatsapp.png" />
+</div>
+<!--Fim do API-->
+{% endblock %}
+
+
 {% endblock %}
