--- a/templates/sobre_nos.html
+++ b/templates/sobre_nos.html
@@ -45,4 +45,16 @@
         </div>
     </section>
     <!-------Banner End------->
+
+    {% block WhatsApp %}
+    <!--API WhatsApp-->
+    <div class="whats">
+    <a aria-label="Chat on WhatsApp" href="https://wa.me/5516993367128" target="_blank"><img alt="Chat on WhatsApp"
+        src="static/imagens/botao-whatsapp.png" />
+    </div>
+    <!--Fim do API-->
+    {% endblock %}
+
+
+
     {% endblock %}
