--- a/templates/calculadora.html
+++ b/templates/calculadora.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main %}
-<!-------Banner Start------->
+<!-----Banner Start----->
 <section>
   <div class="container">
     <div class="row">
@@ -48,19 +48,21 @@
           </div>
         </div>
       </div>
-      <!--<div class="col-md-5">
+      <div class="col-md-5">
         <div class="container" style="padding-top: 50px">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 22rem;">
             <div>
-              <img src="" alt=""> 
+              <img src="/static/imagens/figura_tapetes.png" alt=""> 
           </div>
           </div>
         </div>
       </div>
     </div>
-  </div>-->
+  </div>
 </section>
-<!-------Banner End------->
+<!-----Banner End----->
+
+
 <!--Troca "," por "." nas entradas do campo valor ao gravar no Banco de Dados-->
 <script>
   document.addEventListener('DOMContentLoaded', function () {
