--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-8">
         <div class="container custom-container">
           <div class="row">
             <div class="col-md-12">
@@ -15,11 +15,15 @@
                 "Personal Limpadora" de São Carlos (SP) se destaca como uma referência confiável e dedicada no cuidado
                 de tapetes e estofados. Fundada com a missão de proporcionar resultados impecáveis e um serviço
                 personalizado, a empresa conquistou a confiança de clientes exigentes ao longo dos anos.</p>
+                <div class="" style="margin-top: 185px;">
+                  <img src="/static/imagens/banner_index.png" alt="Frete grátis" srcset="">
+                </div>
+                
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-4">
         <div class="container" style="padding-top: 50px">
           <div class="card" style="width: 18rem;">
             <img src="static/imagens/Logo_Personal.png" class="card-img-top" alt="...">
